--- a/np-pod.yml
+++ b/np-pod.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: np-container
-      image: rapa.iptime.org:5000/mynginx
+      image: 192.168.0.195:5000/nginx:1.0
 
 ---
 apiVersion: v1
